removed P&L from the index

--- a/margins.ipynb
+++ b/margins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('clean-earnings-data/Consolidate-PLs-melted.csv', index_col=0)"
+    "df = pd.read_csv('clean-earnings-data/Consolidate-PLs-melted.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x131d6b19280>"
+       "<seaborn.axisgrid.FacetGrid at 0x23f429f7580>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,21 +66,21 @@
    ],
    "source": [
     "sns.set_style('darkgrid')\n",
-    "sns.catplot(col=margins.index.name, x='Year', y='Value',data=margins.reset_index(), kind='bar', hue='Company', height=5, aspect=1.5, palette='rocket', legend='auto')"
+    "sns.catplot(col='P&L Item', x='Year', y='Value',data=margins.reset_index(), kind='bar', hue='Company', height=5, aspect=1.5, palette='rocket', legend='auto')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x131da004460>"
+       "<seaborn.axisgrid.FacetGrid at 0x23f53c4ad30>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,12 +96,12 @@
     }
    ],
    "source": [
-    "sns.catplot(col=margins.index.name, x='Company', y='Value',data=margins.reset_index(), kind='bar', hue='Year', height=5, aspect=1.5, palette='rocket', legend='auto')"
+    "sns.catplot(col='P&L Item', x='Company', y='Value',data=margins.reset_index(), kind='bar', hue='Year', height=5, aspect=1.5, palette='rocket', legend='auto')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "sns.catplot(x=margins.index.name, y='Value', data=margins.reset_index(), kind='bar', col='Company', height=6, aspect=0.8, errorbar=None, palette='rocket')\n",
+    "sns.catplot(x='P&L Item', y='Value', data=margins.reset_index(), kind='bar', col='Company', height=6, aspect=0.8, errorbar=None, palette='rocket')\n",
     "plt.xlabel('P&L Item')\n",
     "plt.show()"
    ]
